# yield-optimizer-bot

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml
bot/: Cargo.toml  Dockerfile
bot/.sqlx/: query-cf3936d1d1821061a563ef53492666b16d617e8ad03d2830cbce9f2534eab856.json
bot/migrations/: 001_init.sql
bot/src/: main.rs
bot/src/contracts/: addresses.rs  mod.rs
bot/src/contracts/bindings/: aave.rs  compound.rs
bot/src/contracts/protocols/: aave.rs  compound.rs  mod.rs
bot/src/db/: mod.rs  models.rs  orchestrator.rs  pool.rs  queries.rs
bot/src/rpc/: health.rs  loader.rs  manager.rs  mod.rs  rpc.rs  tests.rs  utils.rs
bot/src/strategy/: fetcher.rs  logic.rs  orchestrator.rs
bot/src/stratgey/: fetcher.rs  mod.rs  orchestrator.rs
bot/src/telegram/: client.rs  commands.rs  dispatcher.rs  listener.rs  mod.rs
bot/src/telegram/handlers/: commands.rs
