[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1", features = ["full"] }
tokio = { version = "1.48.0", features = ["full"] }

sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "migrate"
]}

teloxide = { version = "0.17.0", features = ["macros"] }

dotenv = "0.15.0"
anyhow = "1"
reqwest = "0.12.26"
serde = "1.0.228"
futures = "0.3"
